<resources>
    <string name="app_name">Local Weather App</string>
    <string name="location_icon">location_icon</string>
    <string name="your_location_now">Your Location Now</string>
    <string name="temperature">Temperature</string>
    <string name="celcius">Celcius</string>
    <string name="city">City</string>
    <string name="wind_speed">Wind Speed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>